@@ -151,9 +151,7 @@ get_data(LUser, LServer, [El | Els], Res) ->
     LXMLNS = ejabberd_odbc:escape(XMLNS),
     case catch odbc_queries:get_private_data(LServer, Username, LXMLNS) of
     {selected, ["data"], [{SData}]} ->
-	[Data] = exmpp_xml:parse_document(SData,[namespace,
-						 name_as_atom,
-						 autoload_known]),
+	[Data] = exmpp_xml:parse_document(SData,[names_as_atom]),
 	get_data(LUser, LServer, Els, [Data | Res]);
     %% MREMOND: I wonder when the query could return a vcard ?
     {selected, ["vcard"], []} ->
